--- a/views/_header.pug
+++ b/views/_header.pug
@@ -6,11 +6,11 @@ header.header
       svg
 
   .header__logo
-    img(src='img/logo-white.png' alt='Natours logo')
+    img(src='/img/logo-white.png' alt='Natours logo')
   nav.nav.nav--user
     a.nav__el(href='#') My Bookings
     a.nav__el(href='#')
-      img.nav__user-img(src='img/users/user-1.jpg' alt='User photo')
+      img.nav__user-img(src='/img/users/user-1.jpg' alt='User photo')
       span Jonas
     //- button.nav__el Log In
     button.nav__el.nav_el--cta Sign Up
