--- a/public/css/style.css
+++ b/public/css/style.css
@@ -559,17 +559,10 @@ body {
   cursor: pointer;
 }
 
-.mapboxgl-popup {
-  max-width: 25rem;
-}
-
-.mapboxgl-popup-content {
+.mapPopup {
   text-align: center;
   font-family: "Lato", sans-serif;
-  padding: 1.5rem !important;
   font-size: 1.4rem;
-  -webkit-box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.15) !important;
-  box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.15) !important;
 }
 
 .section-reviews {
