--- a/views/_header.pug
+++ b/views/_header.pug
@@ -12,5 +12,5 @@ header.header
     a.nav__el(href='#')
       img.nav__user-img(src='/img/users/user-1.jpg' alt='User photo')
       span Jonas
-    //- button.nav__el Log In
-    button.nav__el.nav_el--cta Sign Up
+    a.nav__el(href='/login') Log In
+    a.nav__el.nav_el--cta(href='/signup') Sign Up
