--- a/views/base.pug
+++ b/views/base.pug
@@ -20,4 +20,5 @@ html
     // FOOTER
     include _footer
 
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/axios/1.5.0/axios.min.js')
     script(src='/js/index.js')
