--- a/dev-data/templates/emailTemplate.pug
+++ b/dev-data/templates/emailTemplate.pug
@@ -288,7 +288,7 @@ html
                               // CONTENT
                               p Hi NAME,
                               p Welcome to Natours, we're glad to have you 🎉🙏
-                              p We're all a big familiy here, so make sure to upload your user photo so we get to know you a bit better!
+                              p We're all a big family here, so make sure to upload your user photo so we get to know you a bit better!
                               table.btn.btn-primary(role='presentation', border='0', cellpadding='0', cellspacing='0')
                                 tbody
                                   tr
