updates script source from index.js to bundle.js due to module bundling

--- a/views/base.pug
+++ b/views/base.pug
@@ -21,4 +21,4 @@ html
     include _footer
 
     script(src='https://cdnjs.cloudflare.com/ajax/libs/axios/1.5.0/axios.min.js')
-    script(type='module' src='/js/index.js')
+    script(type='module' src='/js/bundle.js')
