--- a/views/account.pug
+++ b/views/account.pug
@@ -54,10 +54,10 @@ block content
               label.form__label(for='password-current') Current password
               input#password-current.form__input(type='password', placeholder='••••••••', required, minlength='8')
             .form__group
-              label.form__label(for='password') New password
-              input#password.form__input(type='password', placeholder='••••••••', required, minlength='8')
+              label.form__label(for='password-new') New password
+              input#password-new.form__input(type='password', placeholder='••••••••', required, minlength='8')
             .form__group.ma-bt-lg
-              label.form__label(for='password-confirm') Confirm password
-              input#password-confirm.form__input(type='password', placeholder='••••••••', required, minlength='8')
+              label.form__label(for='password-new-confirm') Confirm password
+              input#password-new-confirm.form__input(type='password', placeholder='••••••••', required, minlength='8')
             .form__group.right
               button.btn.btn--small.btn--green.btn--save-password Save password
