--- a/views/account.pug
+++ b/views/account.pug
@@ -34,7 +34,7 @@ block content
           form.form.form-user-data(action='/submit-user-data' method='POST')
             .form__group
               label.form__label(for='name') Name
-              input#name.form__input(type='text', value=`${user.name}`, required, name='userName')
+              input#name.form__input(type='text', value=`${user.name}`, required, name='name')
             .form__group.ma-bt-md
               label.form__label(for='email') Email address
               input#email.form__input(type='email', value=`${user.email}`, required, name='email')
