adds link to /my-tours route for users

--- a/views/account.pug
+++ b/views/account.pug
@@ -14,7 +14,7 @@ block content
       nav.user-view__menu
         ul.side-nav
           +navItem(`#`, 'settings', 'My Settings', true)
-          +navItem(`#`, 'briefcase', 'My Bookings', true)
+          +navItem(`/my-tours`, 'briefcase', 'My Bookings', true)
           +navItem(`#`, 'star', 'My Reviews', true)
           +navItem(`#`, 'credit-card', 'My Billing', true)
         
