--- a/views/base.pug
+++ b/views/base.pug
@@ -22,4 +22,5 @@ html
 
     script(src='https://cdnjs.cloudflare.com/ajax/libs/axios/1.5.0/axios.min.js')
     script(src='https://js.stripe.com/v3/')
-    script(type='module' src='/js/bundle.js' crossorigin='')
+    script(type='module' src='bundle.js' crossorigin='')
+    //-script(type='module' src='../dist/bundle.js' crossorigin='')
